--- a/content/tools/home-loan-emi-calculator.html
+++ b/content/tools/home-loan-emi-calculator.html
@@ -1,3 +1,10 @@
+---
+title: "2BHK vs 3BHK EMI Calculator"
+description: "Compare EMI between a 2BHK and 3BHK home loan and understand affordability."
+url: "/tools/2bhk-vs-3bhk-emi/"
+layout: "page"
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
